bug(footer/card): fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -12,16 +12,18 @@
   justify-content: center;
   align-items: center;
   background-color: #a7dbab;
+  /* overflow: hidden; */
 }
 
 button{
   border-style: solid; 
-  border: 1px;
+  border: 3px;
   border-color: #d05663;
-  background-color: #d05663;
+  background-color: #AB0022;
+  border-style: solid;
   border-radius: 5px;
-  color: #000;
-  padding: 8px;
+  color: #fff;
+  padding: 5px;
   margin-top: 5px;
   margin-bottom: 5px;
   width: 100px;
@@ -38,7 +40,7 @@ footer{
   background-color: #073431;
   width: 100%;
   height: 50px;
-  margin-top: 30px;
+  order: 3;
 }
 
 form{
@@ -109,28 +111,29 @@ color: #f3f3f5;
   justify-content: center;
   align-items: center;
   background-color: #a7dbab;
-  height: 100vh;
+  margin-top: 10px;
+  height: calc(100vh - 50px);
+  overflow: hidden;
 }
 .greeting-card-container{
   display: flex;
   width: 75%;
   background-color: #f3f3f5;
-  border-color: #d05663;
   border-width: 5px;
   border-top-left-radius: 90px 80px;
   border-bottom-right-radius: 90px 80px;
   padding: 8%;
+  box-shadow: 2px 1px 1px 1px #AB0022, -2px -1px 1px 1px #fa87a8;
 }
 
 .card-image{
   width: 100%;
   margin: auto;
-
 }
 
 .card-message{
   margin: auto;
-  padding: 50px;
+  padding: 30px;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -151,6 +154,7 @@ see Greeting Card component styling for greeting card styling*/
   display: flex;
   justify-content:space-between;
   width: 50%;
+  margin-top: 5px;
 }
 .preview-btn{
   justify-content: center;
@@ -160,10 +164,12 @@ see Greeting Card component styling for greeting card styling*/
 
 .customize-card-container{
   display: flex;
+  min-height: calc(100vh - 50px);
   flex-direction: column;
   text-align: center;
   justify-content: center;
   align-items: center;
+  /* overflow: hidden; */
 }
 .card-form-container{
   display: flex;
